--- a/WpfDrawing/MainWindow.xaml
+++ b/WpfDrawing/MainWindow.xaml
@@ -8,6 +8,9 @@
         Title="MainWindow" Height="450" Width="800">
   <Grid>
     <TabControl>
+      <TabItem Header="CustomCanvasControl">
+        <local:RandomDrawingCanvasControl ClipToBounds="True"/>
+      </TabItem>
       <TabItem Header="CustomControl">
         <local:RandomDrawingControl ClipToBounds="True"/>
       </TabItem>
