3D地図の描画を実装

--- a/Wpf3D/Views/MainWindow.xaml
+++ b/Wpf3D/Views/MainWindow.xaml
@@ -35,6 +35,9 @@
       <TabItem Header="Sample3DGeometry">
         <controls:Sample3DGeometry Margin="5"/>
       </TabItem>
+      <TabItem Header="3DMap">
+        <controls:Map Margin="5"/>
+      </TabItem>
     </TabControl>
   </Grid>
 </Window>
