--- a/Wpf3D/Controls/Map.xaml
+++ b/Wpf3D/Controls/Map.xaml
@@ -4,8 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Wpf3D.Controls"
+             xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:b="clr-namespace:Wpf3D.Behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+  <behaviors:Interaction.Behaviors>
+    <b:CameraMoveBehavior />
+  </behaviors:Interaction.Behaviors>
+  
   <Border BorderBrush="Black" BorderThickness="1" Background="White">
     <Viewport3D x:Name="Viewport"/>
   </Border>
